# serde-xml

./: Cargo.toml
src/de/: mod.rs
