[package]
name = "serde_xml"
version = "0.0.1"
authors = ["Oliver Schneider <serde-xml98198@oli-obk.de>"]
license = "MIT non-military non-spy"
description = "xml support for rust-serde"
repository = "https://github.com/oli-obk/serde-xml"

[dependencies.serde]
# git = "https://github.com/erickt/rust-serde.git"
# <<<<<<< HEAD
# git = "https://github.com/oli-obk/serde-xml.git"
# branch = "xml_requirements"
# =======
# git = "https://github.com/hugoduncan/rust-serde.git"
# branch = "feature/format-specific-field-names"
# >>>>>>> 7a8ad47... Update for format specific renames

git = "https://github.com/hugoduncan/rust-serde.git"
branch = "integration"

[dev-dependencies]
serde_macros = "*"
